# lib/controller/categories.js
@@ -40,7 +40,7 @@ var updateFestivalCategoryV1 = function updateFestivalCategoryV1(req, res, next)
   try {
     assert.object(req.params, 'params');
     assert.string(req.params.id, 'id');
-    assert.string(req.params.cid, 'cid');
+    assert.string(req.params['category.id'], 'category.id');
     category = categoryBuilders.buildCategoryDomain(req.params.id, req.params, false);
   }
   catch (e) {
@@ -49,7 +49,7 @@ var updateFestivalCategoryV1 = function updateFestivalCategoryV1(req, res, next)
   }
 
   var id = req.params.id;
-  var cid = req.params.cid;
+  var cid = req.params['category.id'];
 
   festivals.updateFestivalCategory(id, cid, category, {}, function (err, data) {
     next.ifError(err);
@@ -117,7 +117,7 @@ var getFestivalCategoryV1 = function getFestivalCategoryV1(req, res, next) {
   try {
     assert.object(req.params, 'params');
     assert.string(req.params.id, 'id');
-    assert.string(req.params.cid, 'cid');
+    assert.string(req.params['category.id'], 'category.id');
   }
   catch (e) {
     logger.warn(e);
@@ -125,7 +125,7 @@ var getFestivalCategoryV1 = function getFestivalCategoryV1(req, res, next) {
   }
 
   var id = req.params.id;
-  var cid = req.params.cid;
+  var cid = req.params['category.id'];
 
   festivals.getFestivalCategory(id, cid, options, function (err, data) {
 
