# public/api-docs/swagger.yaml
@@ -17,6 +17,7 @@ schemes:
   - https
 produces:
   - application/vnd.festivals.v1+json
+  - application/vnd.festivals.v1+xml
 security:
   - oauth2token:
     - public
@@ -28,8 +29,6 @@ paths:
       summary: Find festivals
       description: Get festivals collection
       operationId: getFestivals
-      consumes:
-        - application/json
       produces:
         - application/vnd.festivals.v1+json
       security:
@@ -108,6 +107,28 @@ paths:
         "422":
           description: Invalid parameter value
   "/festivals/{id}":
+    get:
+      tags:
+        - festivals
+      summary: Get festival
+      description: Get festival
+      operationId: getFestival
+      produces:
+        - application/vnd.festivals.v1+json
+      security:
+        - oauth2token:
+          - festivals:get
+      parameters:
+        - name: id
+          in: path
+          description: Festival id
+          required: true
+          type: string
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: "#/definitions/FestivalResponse"
     put:
       tags:
         - festivals
@@ -155,8 +176,6 @@ paths:
       summary: Get festival events
       description: Get festival events collection
       operationId: getFestivalEvents
-      consumes:
-        - application/json
       produces:
         - application/vnd.festivals.v1+json
       security:
@@ -255,6 +274,33 @@ paths:
         "422":
           description: Invalid parameter value
   "/festivals/{id}/events/{event.id}":
+    get:
+      tags:
+        - events
+      summary: Get festival event
+      description: Get festival event collection
+      operationId: getFestivalEvent
+      produces:
+        - application/vnd.festivals.v1+json
+      security:
+        - oauth2token:
+          - events:get
+      parameters:
+        - name: id
+          in: path
+          description: Festival id
+          required: true
+          type: string
+        - name: event.id
+          in: path
+          description: Event id
+          required: true
+          type: string
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: "#/definitions/EventResponse"
     put:
       tags:
         - events
@@ -390,6 +436,33 @@ paths:
         "422":
           description: Invalid parameter value
   "/festivals/{id}/categories/{category.id}":
+    get:
+      tags:
+        - categories
+      summary: Get festival category
+      description: Get festival category
+      operationId: getFestivalCategory
+      produces:
+        - application/vnd.festivals.v1+json
+      security:
+        - oauth2token:
+          - categories:get
+      parameters:
+        - name: id
+          in: path
+          description: Festival id
+          required: true
+          type: string
+        - name: category.id
+          in: path
+          description: Category id
+          required: true
+          type: string
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: "#/definitions/CategoryResponse"
     put:
       tags:
         - categories
@@ -525,6 +598,33 @@ paths:
         "422":
           description: Invalid parameter value
   "/festivals/{id}/places/{place.id}":
+    get:
+      tags:
+        - places
+      summary: Get festival place
+      description: Get festival place
+      operationId: getFestivalPlace
+      produces:
+        - application/vnd.festivals.v1+json
+      security:
+        - oauth2token:
+          - places:get
+      parameters:
+        - name: id
+          in: path
+          description: Festival id
+          required: true
+          type: string
+        - name: place.id
+          in: path
+          description: Place id
+          required: true
+          type: string
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: "#/definitions/PlaceResponse"
     put:
       tags:
         - places
